<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aaaaaa"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_item_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:text="@string/add_item_prompt"
        android:background="#aaaaaa"/>

    <!-- Text field to enter item -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/add_item_label"
            android:layout_marginEnd="20sp"
            android:textSize="20sp"
            android:text="@string/new_item"/>

        <EditText
            android:id="@+id/add_item_name"
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:background="@color/white"
            android:hint="@string/enter_item"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_type_label"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20sp"
            android:text="@string/item_type"
            android:textSize="20sp" />

    <EditText
        android:id="@+id/add_item_type"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="20sp"
        android:hint="@string/enter_type"
        tools:ignore="LabelFor" />

    </LinearLayout>

    <!-- Buttons -->
    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/add_item_button" />

    <Button
        android:id="@+id/return_main_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/look_up_items" />


</LinearLayout>